force-app/main/default/objects/Salesforce_Tickets__c/Salesforce_Tickets__c.object-meta.xml
<CustomObject>
    <description>Submit tickets here for Salesforce bugs, changes or information that needs to be updated.</description>
    <label>Salesforce Ticket</label>
    <nameField>
        <displayFormat>TICK-{00000}</displayFormat>
        <label>Salesforce Tickets</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>