force-app/main/default/objects/Salesforce_Tickets__c/fields/Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>Admin_Comments__c</fullName>
    <inlineHelpText>This is only available to Sys. Admins and Sales Admins</inlineHelpText>
    <label>Admin Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>