force-app/main/default/objects/Salesforce_Tickets__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to Sys Admins and Sales Admins</description>
    <label>Assigned User</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00ei0000001247zAAA</value>
        </filterItems>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00ei0000000cFSRAA2</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>