force-app/main/default/objects/Salesforce_Tickets__c/fields/Days_open__c.field-meta.xml
<CustomField>
    <fullName>Days_open__c</fullName>
    <formula>IF( ISBLANK(Completed_Date__c ), TODAY() - DATEVALUE(CreatedDate) , Completed_Date__c - DATEVALUE(CreatedDate))</formula>
    <label># Days open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>