force-app/main/default/objects/Salesforce_Tickets__c/fields/Object_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Object_URL_2__c</fullName>
    <inlineHelpText>If there are duplicates or other examples</inlineHelpText>
    <label>Object URL 2</label>
    <type>Url</type>
</CustomField>