force-app/main/default/objects/Salesforce_Tickets__c/fields/Object_URL__c.field-meta.xml
<CustomField>
    <fullName>Object_URL__c</fullName>
    <inlineHelpText>Link to the Account, Opportunity or Contact that needs to be updated or merged</inlineHelpText>
    <label>Object URL</label>
    <type>Url</type>
</CustomField>