force-app/main/default/objects/Salesforce_Tickets__c/fields/Operations_Response__c.field-meta.xml
<CustomField>
    <fullName>Operations_Response__c</fullName>
    <inlineHelpText>For use of the assigned person and their resolution of the ticket</inlineHelpText>
    <label>Operations Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>