force-app/main/default/objects/Salesforce_Tickets__c/fields/Salesforce_Project__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Project</label>
    <referenceTo>Salesforce_Project__c</referenceTo>
    <relationshipLabel>Salesforce Tickets</relationshipLabel>
    <relationshipName>Salesforce_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>