force-app/main/default/objects/Salesforce_Tickets__c/fields/Ticket_Category__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Category__c</fullName>
    <label>Ticket Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fix</fullName>
            </value>
            <value>
                <fullName>List Upload</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Update/Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>