force-app/main/default/objects/Salesforce_Tickets__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <inlineHelpText>Where the ticket status is</inlineHelpText>
    <label>Ticket Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>More Information needed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed No Resolution</fullName>
            </value>
            <value>
                <fullName>Closed Fixed</fullName>
            </value>
            <value>
                <fullName>Closed No Fix</fullName>
            </value>
            <value>
                <fullName>Open Project</fullName>
            </value>
            <value>
                <fullName>Closed Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>