force-app/main/default/objects/Salesforce_Tickets__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <inlineHelpText>Select which best meets your needs</inlineHelpText>
    <label>Ticket Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ticket_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Needs Subscriber ID</fullName>
            </value>
            <value>
                <fullName>Mark as Closed Won</fullName>
            </value>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard Help</fullName>
            </value>
            <value>
                <fullName>Salesforce Error</fullName>
            </value>
            <value>
                <fullName>Update Needed</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Insidesales.com</fullName>
            </value>
            <value>
                <fullName>CalendarAnything</fullName>
            </value>
            <value>
                <fullName>MRFMS Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>