force-app/main/default/objects/Salesforce_Tickets__c/recordTypes/CS_Ticket.recordType-meta.xml
<RecordType>
    <fullName>CS_Ticket</fullName>
    <active>true</active>
    <description>Used for Tickets for CS</description>
    <label>CS Ticket</label>
</RecordType>