force-app/main/default/objects/Salesforce_Tickets__c/recordTypes/Sales_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Sales_Ticket</fullName>
    <active>true</active>
    <description>Used for Sales SF Tickets</description>
    <label>Sales Ticket</label>
</RecordType>