force-app/main/default/objects/Salesforce_Tickets__c/validationRules/Assigned_to_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_to_is_blank</fullName>
    <active>true</active>
    <description>If CS ticket record type assigned to field must have a value to set a complete status.</description>
    <errorConditionFormula>ANd(OR(
ISPICKVAL(Ticket_Status__c, &quot;Closed No Resolution&quot;),
ISPICKVAL(Ticket_Status__c, &quot;Closed Fixed&quot;),
ISPICKVAL(Ticket_Status__c, &quot;Closed No Fix&quot;)),
ISBLANK(Assigned_User__c))</errorConditionFormula>
    <errorMessage>Assigned User field is blank.</errorMessage>
</ValidationRule>