force-app/main/default/objects/Salesforce_Tickets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Assigned_User__c</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Operations_Response__c</columns>
    <columns>Ticket_Category__c</columns>
    <columns>Ticket_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>