force-app/main/default/objects/Salesforce_Tickets__c/listViews/All_Support_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Support_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Assigned_User__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Salesforce_Tickets__c.CS_Ticket</value>
    </filters>
    <label>All Support Tickets</label>
</ListView>