force-app/main/default/objects/Salesforce_Tickets__c/listViews/AllSalesTickets.listView-meta.xml
<ListView>
    <fullName>AllSalesTickets</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Operations_Response__c</columns>
    <columns>Ticket_Category__c</columns>
    <columns>Ticket_Type__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>notEqual</operation>
        <value>Enterprise,Support,Onboarding</value>
    </filters>
    <label>Sales Tickets - All</label>
</ListView>