force-app/main/default/objects/Salesforce_Tickets__c/listViews/Closed_CS_Tickets.listView-meta.xml
<ListView>
    <fullName>Closed_CS_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Salesforce_Tickets__c.CS_Ticket</value>
    </filters>
    <filters>
        <field>Ticket_Status__c</field>
        <operation>equals</operation>
        <value>Closed No Resolution,Closed Fixed,Closed No Fix,Closed Project</value>
    </filters>
    <label>Closed CS Tickets</label>
</ListView>