force-app/main/default/objects/Salesforce_Tickets__c/listViews/Open_CS_Tickets.listView-meta.xml
<ListView>
    <fullName>Open_CS_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Days_open__c</columns>
    <columns>Priority__c</columns>
    <columns>Ticket_Type__c</columns>
    <columns>Ticket_Category__c</columns>
    <columns>Description__c</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Admin_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Salesforce_Tickets__c.CS_Ticket</value>
    </filters>
    <filters>
        <field>Ticket_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Assigned,More Information needed,In Progress</value>
    </filters>
    <label>Open CS Tickets</label>
</ListView>