force-app/main/default/objects/Salesforce_Tickets__c/listViews/Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Open_Tickets</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Ticket_Category__c</columns>
    <columns>Ticket_Type__c</columns>
    <columns>Ticket_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ticket_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Assigned,More Information needed,In Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Salesforce_Tickets__c.Sales_Ticket</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Open Sales Tickets</label>
</ListView>