force-app/main/default/objects/Salesforce_Tickets__c/listViews/Supervisor_Tickets.listView-meta.xml
<ListView>
    <fullName>Supervisor_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Ticket_Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Days_open__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Paul Raffensparger,Geoffrey Parker</value>
    </filters>
    <filters>
        <field>Ticket_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed Fixed</value>
    </filters>
    <label>Supervisor Tickets</label>
</ListView>